--- a/myclubboard/package.json
+++ b/myclubboard/package.json
@@ -21,5 +21,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "tailwindcss-3d": "^1.0.1"
   }
 }
