--- a/myclubboard/backend/Dockerfile
+++ b/myclubboard/backend/Dockerfile
@@ -1,13 +1,13 @@
-FROM oven/bun
+FROM oven/bun:latest
 
 WORKDIR /app
 
-COPY package.json .
-COPY bun.lockb .
+COPY package.json ./
+COPY bun.lockb ./
+COPY src ./
 
 RUN bun install
 
-COPY . .
 
 EXPOSE 8080
 
