--- a/myclubboard/package.json
+++ b/myclubboard/package.json
@@ -11,6 +11,7 @@
     "check": "npx prettier --check ."
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.27.2",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
