--- a/myclubboard/package.json
+++ b/myclubboard/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.27.2",
+    "@hookform/resolvers": "^3.3.2",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
@@ -20,10 +21,12 @@
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3",
     "reactjs-popup": "^2.0.6",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "tailwindcss-3d": "^1.0.1"
