--- a/myclubboard/package.json
+++ b/myclubboard/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "@clerk/nextjs": "^4.27.2",
     "@hookform/resolvers": "^3.3.2",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.3",
+    "@types/mdx": "^2.0.10",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
